--- a/game.html
+++ b/game.html
@@ -6,11 +6,14 @@
         canvas {
             border: 1px solid black;
         }
+        canvas#myCanvas2 {
+            border: 10px solid blue;
+        }
     </style>
 </head>
 <body>
     <canvas id="myCanvas" width="400" height="800"></canvas>
-    <canvas id="myCanvas2" width="400" height="800"></canvas>
+    <canvas id="myCanvas2" width="380" height="780"></canvas>
     <script src="game.js" type="module" defer></script>
 </body>
 </html>
